--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,6 +44,7 @@ pipeline {
             steps {
                 withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'docker_nexus', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
                     sh 'docker login 172.21.96.1:8083 -u $USERNAME -p $PASSWORD'
+                    sh 'docker tag microservicio:latest 172.21.96.1:8083/repository/docker-private/microservicio:latest'
                     sh 'docker push 172.21.96.1:8083/repository/docker-private/microservicio:latest'  
                 }
             }
