--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,5 +36,18 @@ pipeline {
                 }
             }
         }
+
+        stage('Database') {
+            steps {
+                dir("liquibase/"){
+
+
+                sh 'liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
+
+                }
+               
+            }
+
+        
     }
 }
