--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
                 dir("liquibase/"){
 
 
-                sh 'liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
+                sh '/opt/liquibase/liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
 
                 }
                
