--- a/jenkinsfile
+++ b/jenkinsfile
@@ -39,11 +39,8 @@ pipeline {
 
         stage('Database') {
             steps {
-                dir("liquibase/"){
-
-
-                sh '/opt/liquibase/liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
-
+                //dir("liquibase/"){
+                  //  sh '/opt/liquibase/liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
                 }
                
             }
