--- a/jenkinsfile
+++ b/jenkinsfile
@@ -39,10 +39,9 @@ pipeline {
 
         stage('Database') {
             steps {
-                //dir("liquibase/"){
-                  //  sh '/opt/liquibase/liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
-                
-               // }
+                dir("liquibase/"){
+                    sh '/opt/liquibase/liquibase --changeLogFile="changesets/db.changelog-master.xml" update'
+                }
                
             }
 
