--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,6 +37,19 @@ pipeline {
             }
         }
 
+        stage('Deploy Service') {
+            steps {
+                withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'docker_nexus', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
+                    sh 'docker login 10.204.53.224:8083 -u $USERNAME -p $PASSWORD'
+                    sh 'docker stop microservicio || true'
+                    sh 'docker run -d --rm --name microservicio -e SPRING_PROFILES_ACTIVE=dev -p 8090:8090 10.204.53.224:8083/repository/docker-private/microservicio:latest'
+                }
+            }
+               
+        }
+
+        
+
         stage('Database') {
             steps {
                 dir("liquibase/"){
@@ -46,5 +59,19 @@ pipeline {
             }
 
         }
+
+        stage('Estress') {
+            steps {
+                sleep 5
+                dir("GatlingTest/"){
+                    sh 'mvn gatling:test -Dgatling.simulationClass=microservice.PingUsersSimulation    ejecutar la simulacion de pruebas de estres'
+                }
+               
+            }
+
+        }
+
+
+
     }
 }
