--- a/jenkinsfile
+++ b/jenkinsfile
@@ -69,9 +69,12 @@ pipeline {
                
             }
 
+            post {
+                always {
+                    gatlingArchive()
+                }
+            }          
         }
-
-
 
     }
 }
